cmake_minimum_required(VERSION 3.5)

project(problem-solving)

add_executable(remove_digits problems/cses/remove_digits.cpp)
add_executable(array_description problems/cses/array_description.cpp)
add_executable(counting_towers problems/cses/counting_towers.cpp)
add_executable(rectangle_cutting problems/cses/rectangle_cutting.cpp)
add_executable(removal_game problems/cses/removal_game.cpp)
add_executable(projects problems/cses/projects.cpp)
